Changed widths for tablet and desktop users

--- a/03.01-206-colors-starter/css/main.css
+++ b/03.01-206-colors-starter/css/main.css
@@ -56,7 +56,6 @@ footer {
 
 
 /*---------- TABLET ----------*/
-/* Change the background colors below */
 
 @media (min-width: 768px) {
   header {
@@ -68,17 +67,20 @@ footer {
   }
 
   #column-2 {
-    background-color:lightyellow;
+    background-color:mistyrose;
   }
 
   #column-3 {
-    background-color:lightgreen;
+    background-color:lightgoldenrodyellow;
+	  width: 100%;
   }
 
   footer {
     background-color:lightskyblue;
   }
-  
+  .col-3 {
+    width: 50%;
+  }
 }
 
 
@@ -98,10 +100,14 @@ footer {
 
   #column-3 {
     background-color: green;
-  }
+	width: 33.33%;
+	}
 
   footer {
     background-color: blue;
+  }
+	.col-3 {
+    width: 33.3%;
   }
    
 }
