--- a/breakpoints-starter/css/main.css
+++ b/breakpoints-starter/css/main.css
@@ -8,5 +8,12 @@
 
 /* ----------- Monitors larger than 1200px wide ----------- */
 @media (min-width: 1200px) {
-
+	body {
+		background: blue;
+	}
+}
+@media (max-width: 767px){
+	body {
+		background: gray;
+	}
 }
